# Hydra-ssss

./: DESCRIPTION  Makefile.am  Makefile.in  README.md  RELEASE-NOTES  aclocal.m4  configure  configure.ac
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
doc/: Makefile.am  Makefile.in
doc/apidoc/: Makefile.am  Makefile.in
doc/man/: Makefile.am  Makefile.in  glite-ssss-join-key.1.xml  glite-ssss-split-key.1.xml
interface/: Makefile.am  Makefile.in
interface/glite/security/: ssss.h
project/: configure.properties.xml  module-version.m4  version.properties
src/: Makefile.am  Makefile.in  genKey.c  joinKey.c  joinPasswd.c  log4c.c  shamir-funcs.c  shamir.c  splitKey.c  splitPasswd.c  ssss.c  ssssI.h  test-shamir-ascii.c  test-shamir-ascii.sh  test-shamir.c  test-shamir.sh
src/autogen/: config.h.in
