#
#  Copyright (c) Members of the EGEE Collaboration. 2005.
#  See http://eu-egee.org/partners/ for details on the copyright holders.
#  For license conditions see the license file or http://eu-egee.org/license.html
#
#  doc/Makefile.am file for the gLite Transfer URL Copy module
#
#  Authors: Akos Frohner <Akos.Frohner@cern.ch>
#  Version info: $Id: Makefile.am,v 1.2 2006-08-07 14:58:37 szamsu Exp $
#  Release: $Name: not supported by cvs2svn $

SUBDIRS	= apidoc

docdir = $(datadir)/doc/$(PACKAGE)
#dist_doc_DATA = README

MAINTAINERCLEANFILES = Makefile.in
